[gd_scene load_steps=7 format=2]

[ext_resource path="res://Menus/Shop.gd" type="Script" id=1]
[ext_resource path="res://white.png" type="Texture" id=2]
[ext_resource path="res://Graphics/joystix monospace copy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[node name="Shop" type="Node2D"]
script = ExtResource( 1 )

[node name="Pistol" type="Area2D" parent="."]
position = Vector2( 186.045, 459.705 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="Pistol"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pistol"]
shape = SubResource( 1 )

[node name="Label" type="Label" parent="Pistol"]
margin_left = -19.4906
margin_top = -35.8206
margin_right = 22.5094
margin_bottom = -25.8206
custom_fonts/font = SubResource( 2 )
text = "Pistol"

[node name="Sniper" type="Area2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 521.3, 449.264 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="Sniper"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sniper"]
shape = SubResource( 1 )

[node name="Label2" type="Label" parent="Sniper"]
margin_left = -23.6598
margin_top = -31.3139
margin_right = 18.3402
margin_bottom = -21.3139
custom_fonts/font = SubResource( 2 )
text = "Sniper"

[node name="Shotgun" type="Area2D" parent="."]
modulate = Color( 0, 1, 0.415686, 1 )
position = Vector2( 914.822, 453.342 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="Shotgun"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shotgun"]
shape = SubResource( 1 )

[node name="Label4" type="Label" parent="Shotgun"]
margin_left = -27.648
margin_top = -31.0567
margin_right = 21.352
margin_bottom = -21.0567
custom_fonts/font = SubResource( 2 )
text = "Shotgun"

[node name="Bazooka" type="Area2D" parent="."]
modulate = Color( 0, 0.27451, 1, 1 )
position = Vector2( 1241.88, 451.192 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="Bazooka"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bazooka"]
shape = SubResource( 1 )

[node name="Label4" type="Label" parent="Bazooka"]
margin_left = -21.4538
margin_top = -32.1026
margin_right = 20.5462
margin_bottom = -22.1026
custom_fonts/font = SubResource( 2 )
text = "Bazooka"

[node name="Beam Dagger" type="Area2D" parent="."]
modulate = Color( 0.85098, 0, 1, 1 )
position = Vector2( 1665.97, 445.609 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="Beam Dagger"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beam Dagger"]
shape = SubResource( 1 )

[node name="Label3" type="Label" parent="Beam Dagger"]
margin_left = -32.2405
margin_top = -29.8498
margin_right = 44.7595
margin_bottom = -19.8498
custom_fonts/font = SubResource( 2 )
text = "Beam Dagger"

[node name="HP" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 275.741, 872.061 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="HP"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HP"]
shape = SubResource( 1 )

[node name="Label3" type="Label" parent="HP"]
margin_left = -21.3207
margin_top = -31.3057
margin_right = 55.6793
margin_bottom = -21.3057
custom_fonts/font = SubResource( 2 )
text = "HEALTH"

[node name="ARMOUR" type="Area2D" parent="."]
modulate = Color( 1, 0.960784, 0, 1 )
position = Vector2( 1586.12, 861.141 )
scale = Vector2( 5, 5 )

[node name="white" type="Sprite" parent="ARMOUR"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ARMOUR"]
shape = SubResource( 1 )

[node name="Label3" type="Label" parent="ARMOUR"]
margin_left = -21.3207
margin_top = -31.3057
margin_right = 55.6793
margin_bottom = -21.3057
custom_fonts/font = SubResource( 2 )
text = "Armour"

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 961.779, 940.795 )
[connection signal="body_entered" from="Pistol" to="." method="_on_Pistol_body_entered"]
[connection signal="body_entered" from="Sniper" to="." method="_on_Sniper_body_entered"]
[connection signal="body_entered" from="Shotgun" to="." method="_on_Shotgun_body_entered"]
[connection signal="body_entered" from="Bazooka" to="." method="_on_Bazooka_body_entered"]
[connection signal="body_entered" from="Beam Dagger" to="." method="_on_Beam_Dagger_body_entered"]
[connection signal="body_entered" from="HP" to="." method="_on_HP_body_entered"]
[connection signal="body_entered" from="ARMOUR" to="." method="_on_ARMOUR_body_entered"]
